--- a/nanodip/templates/classifiers.html
+++ b/nanodip/templates/classifiers.html
@@ -14,7 +14,7 @@
 <script>
   function getClfContent(startNewRun) {
     $.ajax({
-      url: "{{url}}",
+      url: "{{url_start_and_refresh}}",
       type: "GET",
       contentType: "application/json;charset=UTF-8",
       data: {
