--- a/nanodip/templates/classifiers.html
+++ b/nanodip/templates/classifiers.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-  Non supervised classifiers for {{sample_name}} against {{reference_name}}
+  Supervised classifiers for {{sample_name}} against {{reference_name}}
   <br>
   <br>
   <div id="clf_content" class ="mono show_whitespace"></div>
