--- a/nanodip/templates/analysis_cpg.html
+++ b/nanodip/templates/analysis_cpg.html
@@ -15,6 +15,7 @@
 
 <script>
   function getCpGs() {
+console.log("start");
     $.ajax({
       url: "{{url_cpgs}}",
       type: "GET",
@@ -24,6 +25,7 @@
       },
       dataType:"json",
       success: function (data) {
+console.log("success");
         var stats = data;
         var methylationCalled;
         if (stats["called"] != "") {
